# tes3mp-plugins

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindLibFFI.cmake  FindLuaJit.cmake  FindTES3MP.cmake  GenFFI.cmake  tes3mpPlugin.cmake
lua/: CMakeLists.txt  api.lua  lua.c  murmurhash.c  murmurhash.h
template/: CMakeLists.txt  template.c
